# northwestern-fy26-msai-foundry-agentic-ai

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: asigments.md  quickstart.md  single_agent_architecture.md
notebooks/: README.md  lab1_azure_functions.ipynb  lab2_logic_apps.ipynb  lab3_single_agent_tool_calling.ipynb  lab4_mcp_server_azure_functions.ipynb  lab5_single_agent_mcp_integration.ipynb  lab6_multi_agent_orchestration.ipynb  lab7_agent_guardrails.ipynb  lab8_safety_evaluations.ipynb  lab9_tracing_observability.ipynb  lab9b_aitk_tracing.ipynb
src/: __init__.py  agent_core.py  tracing.py
src/abstractions/: azure_functions.py  logic_apps.py
src/tool_registry/mcptest/: .gitignore  README.md  architecture-diagram.drawio  azure.yaml  host.json
src/tool_registry/mcptest/.devcontainer/: Dockerfile  devcontainer.json  first-run-notice.txt
src/tool_registry/mcptest/.github/: copilot-instructions.md
src/tool_registry/mcptest/src/: function_app.py
tests/: conftest.py  test_azure_functions.py  test_logic_apps.py
